<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_backup"
    tools:context="com.kfouri.controlatusgastos.Activities.BackupActivity">

    <LinearLayout
        android:id="@+id/botonera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/btnUploadPhoto"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/restaurar"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDownload"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/backup"
        android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/ultimo_backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utlimoBackup"
        android:layout_below="@+id/botonera"
        android:textSize="14sp"/>


    <LinearLayout
        android:id="@+id/botonera2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/ultimo_backup">

        <Button
            android:id="@+id/btnExportarExcel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/exportarExcel"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnExportarExcelMail"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/exportarExcelMail"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/carpeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carpeta"
        android:layout_below="@+id/botonera2"
        android:textSize="14sp"/>


</RelativeLayout>
