<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_nuevo_gasto"
    tools:context="com.kfouri.controlatusgastos.Activities.NuevoGastoActivity">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport = "true">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:showIn="@layout/activity_listado_gastos"
            tools:context="com.kfouri.controlatusgastos.Activities.ListadoGastosActivity"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/fecha_gasto_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/fecha"
                android:textSize="18sp"/>

            <LinearLayout
                android:id="@+id/layout_fecha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fecha_gasto_titulo"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <DatePicker
                    android:id="@+id/fecha_gasto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:scaleX=".8"
                    android:scaleY=".8"
                    style="@android:style/Widget.DatePicker"/>

                <Button
                    android:id="@+id/botonBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/Buscar" />

            </LinearLayout>

            <TextView
                android:id="@+id/titulo_listado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/ListadoGastosSimple"
                android:layout_below="@+id/layout_fecha"
                android:textSize="18sp"/>

            // custom Headers
            <LinearLayout
                android:id="@+id/customHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/titulo_listado">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fecha" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Categoria" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Importe" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Accion" />
            </LinearLayout>

            <com.kfouri.controlatusgastos.Utils.ExpandableHeightListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:fadingEdge="none"
                android:focusable="false"
                android:scrollbars="none"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/customHeader"
                />

            <TextView
                android:id="@+id/titulo_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/total"
                android:layout_below="@+id/listView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="0.00"
                android:layout_toRightOf="@+id/titulo_total"
                android:layout_below="@+id/listView"
                android:textSize="18sp"
                android:layout_marginBottom="35dp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
