<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport = "true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.kfouri.controlatusgastos.Activities.NuevoListadoActivity$PlaceholderFragment"
        android:paddingTop="20dp">

                <TextView
                    android:id="@+id/fecha_gasto_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/fecha"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:id="@+id/layout_fecha"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fecha_gasto_titulo"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <DatePicker
                        android:id="@+id/fecha_gasto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        style="@android:style/Widget.DatePicker"/>

                    <Button
                        android:id="@+id/botonBuscar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="50dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/Buscar" />

                </LinearLayout>

                <TextView
                    android:id="@+id/titulo_listado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:text="@string/ListadoGastos"
                    android:layout_below="@+id/layout_fecha"
                    android:textSize="18sp"/>

                // custom Headers
                <LinearLayout
                    android:id="@+id/customHeader"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/titulo_listado">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Categoría" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Importe" />

                </LinearLayout>

                <com.kfouri.controlatusgastos.Utils.ExpandableHeightListView
                    android:id="@+id/listViewMensual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="#00000000"
                    android:fadingEdge="none"
                    android:focusable="false"
                    android:scrollbars="none"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/customHeader"
                    />

                <TextView
                    android:id="@+id/totalMensual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/total"
                    android:layout_below="@+id/listViewMensual"
                    android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>

