<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:showIn="@layout/activity_gasto"
        tools:context="com.kfouri.controlatusgastos.Activities.GastoActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport = "true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp">


        <TextView
            android:id="@+id/fecha_gasto_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/fecha"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/layout_fecha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fecha_gasto_titulo"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <DatePicker
                android:id="@+id/fecha_gasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:scaleX=".8"
                android:scaleY=".8"
                style="@android:style/Widget.DatePicker"/>

        </LinearLayout>

        <TextView
            android:id="@+id/categoria_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/Categoria"
            android:layout_below="@+id/layout_fecha"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spn_categorias"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:prompt="@string/Categorias"
            android:layout_below="@+id/categoria_titulo" />

        <TextView
            android:id="@+id/importe_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Importe"
            android:layout_below="@+id/spn_categorias"
            android:textSize="18sp"/>

        <EditText android:id="@+id/importe"
            android:layout_width="80.0dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal"
            android:layout_below="@id/importe_titulo"
            android:hint="0.00"
            android:gravity="right">

        </EditText>

        <TextView
            android:id="@+id/observacion_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Observacion"
            android:layout_below="@+id/importe"
            android:textSize="18sp"/>

        <EditText android:id="@+id/observacion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/observacion_titulo"
            android:hint="@string/Observacion"/>

            <!--
        <TextView
            android:id="@+id/titulo_listado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/ListadoGastosActivity"
            android:layout_below="@+id/observacion"
            android:textSize="18sp"/>


        // custom Headers
        <LinearLayout
            android:id="@+id/customHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titulo_listado">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Fecha" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Categoría" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Importe" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Acción" />
        </LinearLayout>

        <com.kfouri.controlatusgastos.Utils.ExpandableHeightListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:fadingEdge="none"
            android:focusable="false"
            android:scrollbars="none"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/customHeader"
            />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/total"
                android:layout_below="@+id/listView"
                android:textSize="18sp"
                android:layout_marginBottom="40dp"/>

      -->
    </RelativeLayout>

</ScrollView>

    </RelativeLayout>